--- a/indomie_special_shop.html
+++ b/indomie_special_shop.html
@@ -99,10 +99,10 @@
 
         <div class="amado_product_area section-padding-100">
             <div class="container-fluid">
+                <h6>Indomie Special Shop</h6>
 
                 <div class="row">
-
-
+                    
                     <!-- Single Product Area -->
                     <div class="col-12 col-sm-6 col-md-12 col-xl-6">
                         <div class="single-product-wrapper">
@@ -200,11 +200,9 @@
                                 <!-- Product Meta Data -->
                                 <div class="product-meta-data">
                                     <div class="line"></div>
-                                    <p class="product-price">Rp 5.000-Rp 24.000</p>
+                                    <p class="product-price">Rp 5.000</p>
                                     <a href="miekriting-product-details.html">
-                                        <h6>Indomie Salted Egg</h6>
-                                        <h6>1 Pcs Rp 5.000</h6> 
-                                        <h6>6 Pcs Rp 24.000 (Hemat Seribu)</h6>
+                                       <h6>Indomie Salted Egg</h6>                                         
                                     </a>
                                 </div>
                                 <!-- Ratings & Cart -->
@@ -281,8 +279,8 @@
                                     <div class="line"></div>
                                     <p class="product-price">Rp 9.500</p>
                                     <a href="miekriting-product-details.html">
-                                        <h6>Indomie Kriting (Ayam Panggang dan Goreng Spesial)</h6>
-                                        <h6>Paket Hemat 2 Bungkus</h6>
+                                        <h6>Indomie Kriting (Ayam Panggang dan Goreng Spesial Paket Hemat 2 Pcs)
+                                        </h6>
                                     </a>
                                 </div>
                                 <!-- Ratings & Cart -->
@@ -395,7 +393,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
                     <div class="single_widget_area">
                         <!-- Footer Menu -->
                         <div class="footer_menu">
-                            <nav class="navbar navbar-expand-lg justify-content-end">
+                            <nav class="navbar navbar-expand-lg justify-content-center">
                                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#footerNavContent" aria-controls="footerNavContent" aria-expanded="false" aria-label="Toggle navigation"><i class="fa fa-bars"></i></button>
                                 <div class="collapse navbar-collapse" id="footerNavContent">
                                     <ul class="navbar-nav ml-auto">
