--- a/indexlandingpage.html
+++ b/indexlandingpage.html
@@ -13,6 +13,16 @@
         <!--========== CSS ==========-->
         <link rel="stylesheet" href="assets/css/styles.css">
 
+        <!--========== Google Font ==========-->
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link href="https://fonts.googleapis.com/css2?family=Lato:wght@700&display=swap" rel="stylesheet">
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap" rel="stylesheet">
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&family=Open+Sans:wght@300&family=Roboto:wght@300&display=swap" rel="stylesheet">
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link href="https://fonts.googleapis.com/css2?family=Anton&family=Lexend&display=swap" rel="stylesheet">
+
         <title>Indomie Online Store</title>
     </head>
     <body>
@@ -49,7 +59,7 @@
                                 <h2 class="islands__subtitle">Produk</h2>
                                 <h1 class="islands__title">Indomie</h1>
                                 <h1 class="islands__title2">Kuah</h1>
-                                <p class="islands__description">Indomie kuah adalah sebuah produk mie yang paling pas dimakan saat malam hari karena berkuah dan bisa menghangatkan badan.</p>
+                                <p class="islands__description" style="color: aliceblue;">Indomie kuah adalah sebuah produk mie yang paling pas dimakan saat malam hari karena berkuah dan bisa menghangatkan badan.</p>
                                 <a href="indomie_kuah_shop.html" class="islands__button">Beli Produk <i class='bx bx-right-arrow-alt islands__button-icon'></i></a>
                             </div>
 
@@ -58,7 +68,7 @@
         
                     <!--========== ISLANDS 2 ==========-->
                     <section class="islands swiper-slide">
-                        <img src="image/covergoreng.jpg" alt="" class="islands__bg">
+                        <img src="image/covergoreng.jpg"  alt="" class="islands__bg">
 
                         <div class="islands__container bd-container">
                             <div class="islands__data">
@@ -81,7 +91,7 @@
                                 <h2 class="islands__subtitle">Produk</h2>
                                 <h1 class="islands__title">Indomie </h1>
                                 <h1 class="islands__title2">Special</h1>
-                                 <h1 class="islands__title2">Edition</h1>
+                                 <h1 class="islands__title3">Edition</h1>
                                 <p class="islands__description">Indomie special edition adalah indomie yang memiliki berbagai macam isi toping di dalamnya seperti potongan daging dan ayam.</p>
                                 <a href="indomie_special_shop.html" class="islands__button">Beli Produk <i class='bx bx-right-arrow-alt islands__button-icon'></i></a>
                             </div>
@@ -98,8 +108,8 @@
                                 <h2 class="islands__subtitle">Produk</h2>
                                 <h1 class="islands__title">Indomie</h1>
                                 <h1 class="islands__title2">Khas</h1>
-                                 <h1 class="islands__title2">Nusantara</h1>
-                                <p class="islands__description">Produk Indomie di Indonesia memiliki rasa khas dan favorit dari setiap daerah di Indonesia, silahkan bisa anda lihat dan beli disini.</p>
+                                 <h1 class="islands__title3">Nusantara</h1>
+                                <p class="islands__description" style="color: aliceblue;">Produk Indomie di Indonesia memiliki rasa khas dan favorit dari setiap daerah di Indonesia, silahkan bisa anda lihat dan beli disini.</p>
                                 <a href="indomie_khas_shop.html" class="islands__button">Beli Produk <i class='bx bx-right-arrow-alt islands__button-icon'></i></a>
                             </div>
 
