--- a/indomie_goreng_shop.html
+++ b/indomie_goreng_shop.html
@@ -99,6 +99,7 @@
 
         <div class="amado_product_area section-padding-100">
             <div class="container-fluid">
+                <h6>Indomie Goreng Shop</h6>
 
                 <div class="row">
 
@@ -539,7 +540,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
                     <div class="single_widget_area">
                         <!-- Footer Menu -->
                         <div class="footer_menu">
-                            <nav class="navbar navbar-expand-lg justify-content-end">
+                            <nav class="navbar navbar-expand-lg justify-content-center">
                                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#footerNavContent" aria-controls="footerNavContent" aria-expanded="false" aria-label="Toggle navigation"><i class="fa fa-bars"></i></button>
                                 <div class="collapse navbar-collapse" id="footerNavContent">
                                     <ul class="navbar-nav ml-auto">
@@ -581,73 +582,3 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 
 </html>
 
-<!-- /*Responsive untuk Hp*/
-
-@media only screen and (max-width: 425px){
-  .main-content-wrapper .header-area{
-    -webkit-box-flex: 0;
-    -ms-flex: 0 0 180px;
-    flex: 0 0 180px;
-    width: 180px;
-    max-width: 180px;
-    padding: 30px;
-
-   } 
-  
-  .main-content-wrapper .header-area .nav-close{
-    margin-right: -15px;
-  }
-
-  .main-content-wrapper .header-area .logo{
-    width: 100px;
-    height: 150px;
-    margin-left: 15px;
-  }
-
-  .main-content-wrapper .header-area .amado-nav{
-    margin-top: -80px;
-  }
-
-  .main-content-wrapper .header-area .amado-nav li a{
-    font-size: 12px;
-
-  }
-
-  .main-content-wrapper .header-area .amado-btn-group .amado-btn{
-    width: 90px;
-    height: 50px;
-    font-size: 14px;
-    margin-left: -18px;
-
-  }
-
-  .main-content-wrapper .header-area .cart-fav-search a{
-    font-size: 14px;
-    margin-left: 25px;
-  }
-
-  .main-content-wrapper .header-area .cart-fav-search img{
-    margin-left: -20px;
-    margin-bottom: -25px;
-  
-  }
-
-  .main-content-wrapper .header-area .social-info i{
-    padding: 10px;
-    margin-left: 10px;
-  }
-
-  .main-content-wrapper .amado_product_area {
-    -webkit-box-flex: 0;
-    -ms-flex: 0 0 calc(100% - 200px);
-    flex: 0 0 calc(100% - 200px);
-    width: calc(100% - 200px);
-    max-width: calc(100% - 200px); 
-    margin-top: -400px;
-    margin-left: 140px;
-  }
-
-  
-}
-
-/*Responsive untuk Hp*/ -->
