--- a/indomie_khas_shop.html
+++ b/indomie_khas_shop.html
@@ -95,10 +95,12 @@
         </header>
         <!-- Header Area End -->
 
-       
+
+        <!-- Product Area  -->
 
         <div class="amado_product_area section-padding-100">
             <div class="container-fluid">
+                <h6>Indomie Khas Daerah Shop</h6>
 
                 <div class="row">
 
@@ -122,7 +124,7 @@
                                     <p class="product-price">Rp 4.000</p>
                                     <a href="kuahkhas-product-details.html">
                                         <h6>Indomie Kuah Coto Makassar</h6>
-                                        <h6>Khas Sulawesi Selatan</h6>
+                                        <h5>Khas Sulawesi Selatan</h5>
                                     </a>
                                 </div>
                                 <!-- Ratings & Cart -->
@@ -162,7 +164,7 @@
                                     <p class="product-price">Rp 4.000</p>
                                     <a href="kuahkhas-product-details.html">
                                         <h6>Indomie Goreng Cakalang</h6>
-                                        <h6>Khas Sulawesi Utara</h6>
+                                        <h5>Khas Sulawesi Utara</h5>
                                     </a>
                                 </div>
                                 <!-- Ratings & Cart -->
@@ -202,7 +204,7 @@
                                     <p class="product-price">Rp 3.500</p>
                                     <a href="kuahkhas-product-details.html">
                                         <h6>Indomie Kuah Empal Gentong</h6>
-                                        <h6>Khas Cirebon</h6>
+                                        <h5>Khas Cirebon</h5>
                                     </a>
                                 </div>
                                 <!-- Ratings & Cart -->
@@ -242,7 +244,7 @@
                                     <p class="product-price">Rp 3.500</p>
                                     <a href="kuahkhas-product-details.html">
                                         <h6>Indomie Kuah Kaldu Udang</h6>
-                                        <h6>Khas Bangka Belitung</h6>
+                                        <h5>Khas Bangka Belitung</h5>
                                     </a>
                                 </div>
                                 <!-- Ratings & Cart -->
@@ -319,7 +321,7 @@
                                     <p class="product-price">Rp 4.500</p>
                                     <a href="kuahkhas2-product-details.html">
                                         <h6>Indomie Goreng Masak Habang</h6>
-                                        <h6>Khas Kalimantan Selatan</h6>
+                                        <h5>Khas Kalimantan Selatan</h5>
                                     </a>
                                 </div>
                                 <!-- Ratings & Cart -->
@@ -359,7 +361,7 @@
                                     <p class="product-price">Rp 4.000</p>
                                     <a href="kuahkhas2-product-details.html">
                                         <h6>Indomie Goreng Dendeng Balado</h6>
-                                        <h6>Khas Padang Sumatra Barat</h6>
+                                        <h5>Khas Padang Sumatra Barat</h5>
                                     </a>
                                 </div>
                                 <!-- Ratings & Cart -->
@@ -398,7 +400,7 @@
                                     <p class="product-price">Rp 3.500</p>
                                     <a href="kuahkhas2-product-details.html">
                                         <h6>Indomie Kuah Mie Kocok Bandung</h6>
-                                        <h6>Khas Jawa Barat</h6>
+                                        <h5>Khas Jawa Barat</h5>
                                     </a>
                                 </div>
                                 <!-- Ratings & Cart -->
@@ -437,7 +439,7 @@
                                     <p class="product-price">Rp 3.500</p>
                                     <a href="kuahkhas3-product-details.html">
                                         <h6>Indomie Kuah Sop Buntut</h6>
-                                        <h6>Khas Jakarta</h6>
+                                        <h5>Khas Jakarta</h5>
                                     </a>
                                 </div>
                                 <!-- Ratings & Cart -->
@@ -477,7 +479,7 @@
                                     <p class="product-price">Rp 4.500</p>
                                     <a href="kuahkhas3-product-details.html">
                                         <h6>Indomie Kuah Rasa Soto Banjar</h6>
-                                        <h6>Khas Kalimantan Selatan</h6>
+                                        <h5>Khas Kalimantan Selatan</h5>
                                     </a>
                                 </div>
                                 <!-- Ratings & Cart -->
@@ -517,7 +519,7 @@
                                     <p class="product-price">Rp 4.000</p>
                                     <a href="kuahkhas3-product-details.html">
                                         <h6>Indomie Kuah Rasa Soto Medan</h6>
-                                        <h6>Khas Medan Sumatra Utara</h6>
+                                        <h5>Khas Medan Sumatra Utara</h5>
                                     </a>
                                 </div>
                                 <!-- Ratings & Cart -->
@@ -556,7 +558,7 @@
                                     <p class="product-price">Rp 4.000</p>
                                     <a href="kuahkhas3-product-details.html">
                                         <h6>Indomie Kuah Rasa Soto Banjar Limau Kulit</h6>
-                                        <h6>Khas Kalimantan Selatan</h6>
+                                        <h5>Khas Kalimantan Selatan</h5>
                                     </a>
                                 </div>
                                 <!-- Ratings & Cart -->
@@ -595,7 +597,7 @@
                                     <p class="product-price">Rp 4.000</p>
                                     <a href="kuahkhas4-product-details.html">
                                         <h6>Indomie Kuah Rasa Soto Padang</h6>
-                                        <h6>Khas Padang Sumatra Barat</h6>
+                                        <h5>Khas Padang Sumatra Barat</h5>
                                     </a>
                                 </div>
                                 <!-- Ratings & Cart -->
@@ -634,7 +636,7 @@
                                     <p class="product-price">Rp 3.500</p>
                                     <a href="kuahkhas4-product-details.html">
                                         <h6>Indomie Kuah Rasa Soto Lamongan</h6>
-                                        <h6>Khas Lamongan Jawa Timur</h6>
+                                        <h5>Khas Lamongan Jawa Timur</h5>
                                     </a>
                                 </div>
                                 <!-- Ratings & Cart -->
@@ -707,7 +709,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
                     <div class="single_widget_area">
                         <!-- Footer Menu -->
                         <div class="footer_menu">
-                            <nav class="navbar navbar-expand-lg justify-content-end">
+                            <nav class="navbar navbar-expand-lg justify-content-center">
                                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#footerNavContent" aria-controls="footerNavContent" aria-expanded="false" aria-label="Toggle navigation"><i class="fa fa-bars"></i></button>
                                 <div class="collapse navbar-collapse" id="footerNavContent">
                                     <ul class="navbar-nav ml-auto">
