--- a/indomie_kuah_shop.html
+++ b/indomie_kuah_shop.html
@@ -100,6 +100,7 @@
 
         <div class="amado_product_area section-padding-100">
             <div class="container-fluid">
+                <h6>Indomie Kuah Shop</h6>
 
                 <div class="row">
 
@@ -342,9 +343,11 @@
                         <div class="single-product-wrapper">
                             <!-- Product Image -->
                             <div class="product-img">
+                                <a href="kuah1-product-details.html">
                                 <img src="image/sotomie.png" alt="">
                                 <!-- Hover Thumb -->
                                 <img class="hover-img" src="image/miekuah.png" alt="">
+                                </a>
                             </div>
 
                             <!-- Product Description -->
@@ -379,10 +382,12 @@
                         <div class="single-product-wrapper">
                             <!-- Product Image -->
                             <div class="product-img">
+                                <a href="kariayam-product-details.html">
                                 <img src="image/paket5kari.png" alt="">
                                 <!-- Hover Thumb -->
                                 <img class="hover-img" src="image/indomiekariayam.png" alt="" 
                                 style="margin-top: 20px;">
+                                </a>
                             </div>
 
                             <!-- Product Description -->
@@ -391,7 +396,7 @@
                                 <div class="product-meta-data">
                                     <div class="line"></div>
                                     <p class="product-price">Rp 14.500</p>
-                                    <a href="kuah1-product-details.html">
+                                    <a href="kariayam-product-details-product-details.html">
                                         <h6>Indomie Kari Ayam (Paket Hemat 5 Bungkus)</h6>
                                     </a>
                                 </div>
@@ -466,7 +471,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
                     <div class="single_widget_area">
                         <!-- Footer Menu -->
                         <div class="footer_menu">
-                            <nav class="navbar navbar-expand-lg justify-content-end">
+                            <nav class="navbar navbar-expand-lg justify-content-center">
                                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#footerNavContent" aria-controls="footerNavContent" aria-expanded="false" aria-label="Toggle navigation"><i class="fa fa-bars"></i></button>
                                 <div class="collapse navbar-collapse" id="footerNavContent">
                                     <ul class="navbar-nav ml-auto">
@@ -474,10 +479,10 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
                                             <a class="nav-link" href="indexlandingpage.html">Home</a>
                                         </li>
                                         <li class="nav-item">
-                                            <a class="nav-link" href="indomiekuahshop.html">Shop</a>
+                                            <a class="nav-link" href="indomie_kuah_shop.html">Shop</a>
                                         </li>
                                         <li class="nav-item">
-                                            <a class="nav-link" href="indomiegorengshop.html">Another Product</a>
+                                            <a class="nav-link" href="indomie_goreng_shop.html">Another Product</a>
                                         </li>
                                         <li class="nav-item">
                                             <a class="nav-link" href="checkout.html">Checkout</a>
