--- a/miekriting-product-details.html
+++ b/miekriting-product-details.html
@@ -132,25 +132,25 @@
                                     <div class="carousel-item active">
                                         <a class="gallery_img" href="image/saltedegg.png">
                                             <img class="d-block w-100" src="image/saltedegg.png" 
-                                             style="height: 650px;" alt="First slide">
+                                            alt="First slide">
                                         </a>
                                     </div>
                                     <div class="carousel-item">
                                         <a class="gallery_img" href="image/gorengpremium.png">
                                             <img class="d-block w-100" src="image/gorengpremium.png" 
-                                            style="height: 650px;" alt="Second slide">
+                                            alt="Second slide">
                                         </a>
                                     </div>
                                      <div class="carousel-item">
                                         <a class="gallery_img" href="image/double.png">
                                             <img class="d-block w-100" src="image/double.png" 
-                                            style="height: 550px;" alt="Third slide">
+                                            alt="Third slide">
                                         </a>
                                     </div>
                                      <div class="carousel-item">
                                         <a class="gallery_img" href="image/gorengpremium.png">
                                             <img class="d-block w-100" src="image/kritingaympgng.png" 
-                                            style="height: 650px;" alt="Fourth slide">
+                                            alt="Fourth slide">
                                         </a>
                                     </div>
                                 </div>
