--- a/indomie_kuah_shop.html
+++ b/indomie_kuah_shop.html
@@ -82,9 +82,7 @@
             </div>
             <!-- Cart Menu -->
             <div class="cart-fav-search mb-100">
-                 <a href="cart-kuah.html" class="cart-nav"><img src="img/core-img/cart.png" alt=""> Cart <span>(0)</span></a>
-                <a href="#" class="fav-nav"><img src="img/core-img/favorites.png" alt=""> Favourite</a>
-               
+                <a href="#" class="fav-nav"><img src="img/core-img/favorites.png" alt=""> Favourite</a>             
             </div>
             <!-- Social Button -->
             <div class="social-info d-flex justify-content-between">
@@ -265,7 +263,7 @@
                             <!-- Product Image -->
                             <div class="product-img">
                                 <a href="kariayam-product-details.html">
-                                <img src="image/indomiekariayam.png" alt="">
+                                <img src="image/hdka1.png" alt="">
                                 <!-- Hover Thumb -->
                                 <img class="hover-img" src="image/miekuah.png" alt="">
                                 </a>
