--- a/kariayam-product-details.html
+++ b/kariayam-product-details.html
@@ -118,15 +118,15 @@
                         <div class="single_product_thumb">
                             <div id="product_details_slider" class="carousel slide" data-ride="carousel">
                                 <ol class="carousel-indicators">
-                                    <li class="active" data-target="#product_details_slider" data-slide-to="0" style="background-image: url(image/indomiekariayam.png);">
+                                    <li class="active" data-target="#product_details_slider" data-slide-to="0" style="background-image: url(image/hdka1.png);">
                                     </li>
                                     <li data-target="#product_details_slider" data-slide-to="1" style="background-image: url(image/sotospesial.png);">
                                     </li>
                                 </ol>
                                 <div class="carousel-inner">
                                     <div class="carousel-item active">
-                                        <a class="gallery_img" href="image/indomiekariayam.png">
-                                            <img class="d-block w-100" src="image/indomiekariayam.png" 
+                                        <a class="gallery_img" href="image/Indomiekariayam.png">
+                                            <img class="d-block w-100" src="image/hdka1.png" 
                                             alt="First slide">
                                         </a>
                                     </div>
