--- a/cart-kuah.html
+++ b/cart-kuah.html
@@ -201,7 +201,7 @@
                                     </tr>
                                      <tr>
                                         <td class="cart_product_img">
-                                            <a href="#"><img src="image/indomiekariayam.png" alt="Product"></a>
+                                            <a href="#"><img src="image/Indomiekariayam.png" alt="Product"></a>
                                         </td>
                                         <td class="cart_product_desc">
                                             <h5>Indomie Kuah Kari Ayam</h5>
