--- a/indomie_goreng_shop.html
+++ b/indomie_goreng_shop.html
@@ -314,7 +314,8 @@
                                     <div class="line"></div>
                                     <p class="product-price">Rp 4.000</p>
                                     <a href="miegoreng2-product-details.html">
-                                        <h6>Indomie Goreng Jumbo rasa Ayam Panggang</h6>
+                                        <h6>Indomie Goreng Jumbo </h6>
+                                        <h5>Rasa Ayam Panggang</h5>
                                     </a>
                                 </div>
                                 <!-- Ratings & Cart -->
@@ -354,7 +355,8 @@
                                     <div class="line"></div>
                                     <p class="product-price">Rp 3.500</p>
                                     <a href="miegoreng2-product-details.html">
-                                        <h6>Indomie Goreng Mieghetti Bolognese</h6>
+                                        <h6>Indomie Goreng Mieghetti </h6>
+                                        <h5>Bolognese</h5>
                                     </a>
                                 </div>
                                 <!-- Ratings & Cart -->
