--- a/indomie_khas_shop.html
+++ b/indomie_khas_shop.html
@@ -635,7 +635,7 @@
                                     <div class="line"></div>
                                     <p class="product-price">Rp 3.500</p>
                                     <a href="kuahkhas4-product-details.html">
-                                        <h6>Indomie Kuah Rasa Soto Lamongan</h6>
+                                        <h6>Indomie Kuah Soto Lamongan</h6>
                                         <h5>Khas Lamongan Jawa Timur</h5>
                                     </a>
                                 </div>
