--- a/indomie_kuah_shop.html
+++ b/indomie_kuah_shop.html
@@ -355,7 +355,8 @@
                                     <div class="line"></div>
                                     <p class="product-price">Rp 14.000</p>
                                     <a href="kuah1-product-details.html">
-                                        <h6>Indomie Soto Mie (Paket Hemat 5 Bungkus)</h6>
+                                        <h6>Indomie Soto Mie</h6> 
+                                        <h5>(Paket Hemat 5 Pcs)</h5>
                                     </a>
                                 </div>
                                 <!-- Ratings & Cart -->
@@ -395,12 +396,15 @@
                                     <div class="line"></div>
                                     <p class="product-price">Rp 14.500</p>
                                     <a href="kariayam-product-details-product-details.html">
-                                        <h6>Indomie Kari Ayam (Paket Hemat 5 Bungkus)</h6>
+                                        <h6>Indomie Kari Ayam)</h6>
+                                        <h5>(Paket Hemat 5 Pcs)</h5>
                                     </a>
                                 </div>
                                 <!-- Ratings & Cart -->
                                 <div class="ratings-cart text-right">
                                     <div class="ratings">
+                                        <i class="fa fa-star" aria-hidden="true"></i>
+                                        <i class="fa fa-star" aria-hidden="true"></i>
                                         <i class="fa fa-star" aria-hidden="true"></i>
                                         <i class="fa fa-star" aria-hidden="true"></i>
                                         <i class="fa fa-star" aria-hidden="true"></i>                                  
