--- a/indomie_special_shop.html
+++ b/indomie_special_shop.html
@@ -279,7 +279,7 @@
                                     <div class="line"></div>
                                     <p class="product-price">Rp 9.500</p>
                                     <a href="miekriting-product-details.html">
-                                        <h6>Indomie Kriting (Ayam Panggang dan Goreng Spesial Paket Hemat 2 Pcs)
+                                        <h6>Indomie Kriting (Paket Hemat 2 Pcs)
                                         </h6>
                                     </a>
                                 </div>
@@ -318,12 +318,14 @@
                                     <div class="line"></div>
                                     <p class="product-price">Rp 5.000</p>
                                     <a href="miekriting-product-details.html">
-                                        <h6>Indomie Kriting Goreng Ayam Panggang</h6>
+                                        <h6>Indomie Kriting Goreng </h6>
+                                        <h5>Ayam Panggang</h5>
                                     </a>
                                 </div>
                                 <!-- Ratings & Cart -->
                                 <div class="ratings-cart text-right">
                                     <div class="ratings">
+                                        <i class="fa fa-star" aria-hidden="true"></i>
                                         <i class="fa fa-star" aria-hidden="true"></i>
                                         <i class="fa fa-star" aria-hidden="true"></i>
                                         <i class="fa fa-star" aria-hidden="true"></i>                                  
