--- a/indomie_khas_shop.html
+++ b/indomie_khas_shop.html
@@ -100,7 +100,7 @@
 
         <div class="amado_product_area section-padding-100">
             <div class="container-fluid">
-                <h6>Indomie Khas Daerah Shop</h6>
+                <h6>Indomie Khas Shop</h6>
 
                 <div class="row">
 
