--- a/checkout.html
+++ b/checkout.html
@@ -108,44 +108,44 @@
                             <form action="#" method="post">
                                 <div class="row">
                                     <div class="col-md-6 mb-3">
-                                        <input type="text" class="form-control" id="first_name" value="" placeholder="First Name" required>
+                                        <input type="text" class="form-control" id="first_name" value="" placeholder="Nama Depan" required>
                                     </div>
                                     <div class="col-md-6 mb-3">
-                                        <input type="text" class="form-control" id="last_name" value="" placeholder="Last Name" required>
+                                        <input type="text" class="form-control" id="last_name" value="" placeholder="Nama Belakang" required>
                                     </div>
                                     <div class="col-12 mb-3">
-                                        <input type="text" class="form-control" id="company" placeholder="Company Name" value="">
+                                        <input type="text" class="form-control" id="company" placeholder="Nama Perusahaan" value="">
                                     </div>
                                     <div class="col-12 mb-3">
                                         <input type="email" class="form-control" id="email" placeholder="Email" value="">
                                     </div>
                                     <div class="col-12 mb-3">
-                                        <select class="w-100" id="country">
-                                        <option value="usa">United States</option>
-                                        <option value="uk">United Kingdom</option>
-                                        <option value="ina">Indonesia</option>
-                                        <option value="ger">Germany</option>
-                                        <option value="fra">France</option>
-                                        <option value="ind">India</option>
-                                        <option value="aus">Australia</option>
-                                        <option value="bra">Brazil</option>
-                                        <option value="cana">Canada</option>
+                                        <select class="w-100" id="Provinsi" placeholder="Pilih Provinsi" value="">
+                                        <option value="Jbr">Jawa Barat</option>
+                                        <option value="Jtm">Jawa Timur</option>
+                                        <option value="Jtg">Jawa Tengah</option>
+                                        <option value="Str">Sumatera</option>
+                                        <option value="Kal">Kalimantan</option>
+                                        <option value="Sls">Sulawesi</option>
+                                        <option value="Ppa">Papua</option>
+                                        <option value="Kri">Kepulauan Riau</option>
+                                        <option value="Bng">Bangka Belitung</option>
                                     </select>
                                     </div>
-                                    <div class="col-12 mb-3">
-                                        <input type="text" class="form-control mb-3" id="street_address" placeholder="Address" value="">
+                                     <div class="col-12 mb-3">
+                                        <input type="text" class="form-control" id="city" placeholder="Kota"     value="">
                                     </div>
                                     <div class="col-12 mb-3">
-                                        <input type="text" class="form-control" id="city" placeholder="Town" value="">
+                                        <input type="text" class="form-control mb-3" id="street_address" placeholder="Alamat Lengkap" value="">
                                     </div>
                                     <div class="col-md-6 mb-3">
                                         <input type="text" class="form-control" id="zipCode" placeholder="Zip Code" value="">
                                     </div>
                                     <div class="col-md-6 mb-3">
-                                        <input type="number" class="form-control" id="phone_number" min="0" placeholder="Phone No" value="">
+                                        <input type="number" class="form-control" id="phone_number" min="0" placeholder="Nomor Telepon" value="">
                                     </div>
                                     <div class="col-12 mb-3">
-                                        <textarea name="comment" class="form-control w-100" id="comment" cols="30" rows="10" placeholder="Leave a comment about your order"></textarea>
+                                        <textarea name="comment" class="form-control w-100" id="comment" cols="30" rows="10" placeholder="Tinggalkan Pesan Tentang Pesanan Anda"></textarea>
                                     </div>
 
                                     <div class="col-12">
@@ -180,12 +180,12 @@
                                 <!-- Paypal -->
                                 <div class="custom-control custom-checkbox mr-sm-2">
                                     <input type="checkbox" class="custom-control-input" id="paypal">
-                                    <label class="custom-control-label" for="paypal">Paypal <img class="ml-15" src="img/core-img/paypal.png" alt=""></label>
+                                    <label class="custom-control-label" for="paypal">Bank <img class="ml-15" src="image/cthbank.png" alt=""></label>
                                 </div>
                             </div>
 
                             <div class="cart-btn mt-100">
-                                <a href="#" class="btn amado-btn w-100">Checkout</a>
+                                <a href="checkoutpage.html" class="btn amado-btn w-100">Checkout</a>
                             </div>
                         </div>
                     </div>
