--- a/indomie_khas_shop.html
+++ b/indomie_khas_shop.html
@@ -82,6 +82,7 @@
             </div>
             <!-- Cart Menu -->
             <div class="cart-fav-search mb-100">
+                <a href="cart-khas.html" class="cart-nav"><img src="img/core-img/cart.png" alt=""> Cart <span>(0)</span></a>
                 <a href="#" class="fav-nav"><img src="img/core-img/favorites.png" alt=""> Favourite</a>
                
             </div>
@@ -100,7 +101,7 @@
 
         <div class="amado_product_area section-padding-100">
             <div class="container-fluid">
-                <h6>Indomie Khas Shop</h6>
+                <h6>Indomie Kuliner Nusantara Shop</h6>
 
                 <div class="row">
 
@@ -320,7 +321,7 @@
                                     <div class="line"></div>
                                     <p class="product-price">Rp 4.500</p>
                                     <a href="kuahkhas2-product-details.html">
-                                        <h6>Indomie Goreng Masak Habang</h6>
+                                        <h6>Indomie Masak Habang</h6>
                                         <h5>Khas Kalimantan Selatan</h5>
                                     </a>
                                 </div>
