--- a/kuahkhas-product-details.html
+++ b/kuahkhas-product-details.html
@@ -196,10 +196,30 @@
                                 <div class="cart-btn d-flex mb-50">
                                 </div>
                                 <a href="cart-khas.html">
-                                  <button type="button" name="addtocart" value="5" class="btn amado-btn">Add to cart
+                                  <button type="button" name="addtocart" value="5" class="btn amado-btn">Buy Here
                                   </button>
                                 </a>
                             </form>
+
+                            <div class="form-title">
+                                <h5>OR</h5>
+                            </div>
+
+                            <div class="cart-button"> 
+                                <div class="cart-btn mb-30">
+                                </div>
+                                <a href="https://www.tokopedia.com/search?st=product&q=indomie%20kuliner%20nusantara%20">
+                                <button type="button" class="btn form-btn"><img src="https://abdulkoharmedikal.faskes.com/po-content/uploads/tokopedia.png" alt="">Buy Via Tokopedia</button>
+                                </a>
+                            </div>
+
+                            <div class="cart-button-form"> 
+                                <div class="cart-btn mb-15">
+                                </div>
+                                <a href="https://shopee.co.id/search?keyword=indomie%20kuliner%20nusantara">
+                                <button type="button" class="btn form-btn"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSFiDOCcfOJ-ZSVcICySGaJiBhCge4dH3TFXvcUjA-REp9XhUW7zkEU9G_DIVSzveO-2dk&usqp=CAU" alt="">Buy Via Shoppe</button>
+                                </a>
+                            </div>   
 
                         </div>
                     </div>
