--- a/realmeat-product-details.html
+++ b/realmeat-product-details.html
@@ -179,6 +179,26 @@
                             </a>
                             </form>
 
+                            <div class="form-title">
+                                <h5>OR</h5>
+                            </div>
+
+                            <div class="cart-button"> 
+                                <div class="cart-btn mb-30">
+                                </div>
+                                <a href="https://www.tokopedia.com/indomieofficial/etalase/premium-collection">
+                                <button type="button" class="btn form-btn"><img src="https://abdulkoharmedikal.faskes.com/po-content/uploads/tokopedia.png" alt="">Buy Via Tokopedia</button>
+                                </a>
+                            </div>
+
+                            <div class="cart-button-form"> 
+                                <div class="cart-btn mb-15">
+                                </div>
+                                <a href="https://shopee.co.id/search?keyword=indomie%20premium%20collection">
+                                <button type="button" class="btn form-btn"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSFiDOCcfOJ-ZSVcICySGaJiBhCge4dH3TFXvcUjA-REp9XhUW7zkEU9G_DIVSzveO-2dk&usqp=CAU" alt="">Buy Via Shoppe</button>
+                                </a>
+                            </div>         
+                           
                         </div>
                     </div>
                 </div>
