--- a/indexlandingpage.html
+++ b/indexlandingpage.html
@@ -35,7 +35,7 @@
                     <ul class="nav__list">
                         <li class="nav__item"><a href="#" class="nav__link">Home</a></li>
                         <li class="nav__item"><a href="#" class="nav__link">Explore</a></li>
-                        <li class="nav__item"><a href="#" class="nav__link">About Indomie</a></li>
+                        <li class="nav__item"><a href="aboutindomie.html" class="nav__link">About Indomie</a></li>
                         <li class="nav__item"><a href="#" class="nav__link">Gallery</a></li>
                     </ul>
                 </div>
