--- a/indomie_goreng_shop.html
+++ b/indomie_goreng_shop.html
@@ -82,6 +82,7 @@
             </div>
             <!-- Cart Menu -->
             <div class="cart-fav-search mb-100">
+                <a href="cart-goreng.html" class="cart-nav"><img src="img/core-img/cart.png" alt=""> Cart <span>(0)</span></a>
                 <a href="#" class="fav-nav"><img src="img/core-img/favorites.png" alt=""> Favourite</a>
                
             </div>
@@ -584,3 +585,4 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 
 </html>
 
+ 
