--- a/indomie_kuah_shop.html
+++ b/indomie_kuah_shop.html
@@ -82,6 +82,7 @@
             </div>
             <!-- Cart Menu -->
             <div class="cart-fav-search mb-100">
+                <a href="cart-kuah.html" class="cart-nav"><img src="img/core-img/cart.png" alt=""> Cart <span>(0)</span></a>
                 <a href="#" class="fav-nav"><img src="img/core-img/favorites.png" alt=""> Favourite</a>             
             </div>
             <!-- Social Button -->
@@ -384,7 +385,7 @@
                                 <a href="kariayam-product-details.html">
                                 <img src="image/paket5kari.png" alt="">
                                 <!-- Hover Thumb -->
-                                <img class="hover-img" src="image/indomiekariayam.png" alt="" 
+                                <img class="hover-img" src="image/miekuah2.png" alt="" 
                                 style="margin-top: 20px;">
                                 </a>
                             </div>
@@ -396,7 +397,7 @@
                                     <div class="line"></div>
                                     <p class="product-price">Rp 14.500</p>
                                     <a href="kariayam-product-details-product-details.html">
-                                        <h6>Indomie Kari Ayam)</h6>
+                                        <h6>Indomie Kari Ayam</h6>
                                         <h5>(Paket Hemat 5 Pcs)</h5>
                                     </a>
                                 </div>
