--- a/indomie_special_shop.html
+++ b/indomie_special_shop.html
@@ -82,6 +82,7 @@
             </div>
             <!-- Cart Menu -->
             <div class="cart-fav-search mb-100">
+                <a href="cart-special.html" class="cart-nav"><img src="img/core-img/cart.png" alt=""> Cart <span>(0)</span></a>
                 <a href="#" class="fav-nav"><img src="img/core-img/favorites.png" alt=""> Favourite</a>
                
             </div>
