--- a/miegoreng2-product-details.html
+++ b/miegoreng2-product-details.html
@@ -84,8 +84,7 @@
             </div>
             <!-- Cart Menu -->
             <div class="cart-fav-search mb-100">
-                <a href="cart-goreng.html" class="cart-nav"><img src="img/core-img/cart.png" alt=""> Cart <span>(0)
-                </span></a>
+                <a href="cart-goreng.html" class="cart-nav"><img src="img/core-img/cart.png" alt=""> Cart <span>(0)</span></a>
                 <a href="#" class="fav-nav"><img src="img/core-img/favorites.png" alt=""> Favourite</a>
             </div>
             <!-- Social Button -->
@@ -109,7 +108,7 @@
                                 <li class="breadcrumb-item"><a href="#">Home</a></li>
                                 <li class="breadcrumb-item"><a href="#">Indomie</a></li>
                                 <li class="breadcrumb-item"><a href="#">Mie Goreng</a></li>
-                                <li class="breadcrumb-item active" aria-current="page">Rasa Rica-Rica-Rasa Pedas</li>
+                                <li class="breadcrumb-item active" aria-current="page">Rasa RicaRica-Rasa Pedas</li>
                             </ol>
                         </nav>
                     </div>
@@ -164,7 +163,7 @@
                                 <div class="line"></div>
                                 <p class="product-price">Rp 3.000-Rp 4.000</p>
                                 <a href="product-details.html">
-                                    <h6>Indomie Goreng (Rasa Rica-Rica-Rasa Pedas)</h6>
+                                    <h6>Indomie Goreng (Rasa RicaRica-Rasa Pedas)</h6>
                                 </a>
                                 <!-- Ratings & Review -->
                                 <div class="ratings-review mb-15 d-flex align-items-center justify-content-between">
@@ -192,9 +191,30 @@
                                 <div class="cart-btn d-flex mb-50">
                                 </div>
                                 <a href="cart-goreng.html">
-                                <button type="button" name="addtocart" value="5" class="btn amado-btn">Add to cart</button>
+                                <button type="button" name="addtocart" value="5" class="btn amado-btn">Buy Here      </button>
                                 </a>
                             </form>
+
+                             <div class="form-title">
+                                <h5>OR</h5>
+                            </div>
+
+                            <div class="cart-button"> 
+                                <div class="cart-btn mb-30">
+                                </div>
+                                <a href="https://www.tokopedia.com/indomieofficial/product?q=indomie%20goreng%20&srp_page_id=4544078&srp_page_title=Indomie%20Official%20Store&navsource=shop">
+                                <button type="button" class="btn form-btn"><img src="https://abdulkoharmedikal.faskes.com/po-content/uploads/tokopedia.png" alt="">Buy Via Tokopedia</button>
+                                </a>
+                            </div>
+
+                             <div class="cart-button-form"> 
+                                <div class="cart-btn mb-15">
+                                </div>
+                                <a href="https://shopee.co.id/search?keyword=indomie%20goreng">
+                                <button type="button" class="btn form-btn"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSFiDOCcfOJ-ZSVcICySGaJiBhCge4dH3TFXvcUjA-REp9XhUW7zkEU9G_DIVSzveO-2dk&usqp=CAU" alt="">Buy Via Shoppe</button>
+                                </a>
+                            </div>         
+
 
                         </div>
                     </div>
