--- a/aboutindomie.html
+++ b/aboutindomie.html
@@ -26,7 +26,7 @@
             <img src="image/about.png" alt="">
         </div>
         <div class="history-article">
-            <div data-aos="fade-down-righ">
+            <div data-aos="fade-down-right">
                 <h1>Sejarah Indomie</h1>
                 <p>Ketika mi instan pertama kali diperkenalkan kepada masyarakat Indonesia di tahun 1969, 
                 banyak yang meragukan bahwa mi instan dapat dijadikan sebagai salah satu bahan pangan pokok.</p>
@@ -45,6 +45,7 @@
         </div>
     </div>
     <div id="article">
+        <div data-aos="zoom-in-left">
             <h1 class="article-title"> Tentang Indomie</h1>
             <p class="tagline"> Indomie diproduksi oleh Indofood, pelopor mie instan di Indonesia dan merupakan salah satu produsen 
             mie instan terbesar di dunia. Indomie hadir dalam banyak varietas mulai dari rasa sup klasik seperti 
@@ -52,6 +53,7 @@
             Tersedia di lebih dari 100 negara di seluruh dunia seperti Australia, Selandia Baru, Amerika Serikat,
             Kanada, di seluruh Asia, Afrika, Eropa dan negara-negara Timur Tengah.Dengan kapasitas produksi 
             tahunan 19 miliar bungkus, tidak mengherankan jika Indomie adalah rasa, yang disukai oleh dunia.</p>
+        </div>
         <div data-aos="flip-right">
             <div class="history-image">
                 <img src="image/sejarahindomie.png" alt="">
@@ -72,10 +74,10 @@
     <script>
         ScrollReveal({ reset: true });
     </script>
-     <script> 
-        ScrollReveal().reveal('.article-title');
-        ScrollReveal().reveal('.tagline');
-    </script>
+      <script> 
+         ScrollReveal().reveal('.article-title');
+         ScrollReveal().reveal('.tagline'); 
+     </script>
 <!-- TYPED JS -->
     <script>
         new Typed('#typed',{
